--- a/sass/main.scss
+++ b/sass/main.scss
@@ -33,8 +33,7 @@ html, body {
 
 p {
   line-height: 1.4em;
-  padding: 1.4em;
-  padding-top: 0;
+  padding: 0 1.4em;
   &:first-child {
     padding-top: 1.4em;
   }
@@ -140,7 +139,7 @@ a {
     }
     .current {
       background-color: $col-fg;
-      border-bottom: 0;
+      border-bottom-color: $col-fg;
     }
   }
   .staff {
@@ -163,9 +162,10 @@ a {
   footer {
     @include container;
     p {
-      @include columns(6);
+      @include columns(16);
       margin: 0;
-      text-align: center;
+      text-align: right;
+      font-size: .8em;
     }
   }
 
