--- a/css/main.css
+++ b/css/main.css
@@ -592,6 +592,10 @@ header {
   @media only screen and (min-width: 480px) and (max-width: 767px) {
     .main {
       width: 420px; } }
+  .main img {
+    border-radius: 25px;
+    -webkit-border-radius: 25px;
+    -moz-border-radius: 25px; }
   .main h1, .main h2 {
     text-align: center;
     margin: 0;
@@ -703,6 +707,10 @@ header {
   .staff aside {
     float: right;
     padding: 10px; }
+  .staff aside:last-child {
+    float: none;
+    padding: 0;
+    text-align: center; }
 
 .vcard {
   float: left;
